style.css
@import url("https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&display=swap");

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;

  font-family: "Kufam", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  color: white;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background: url(/background/background.jpg) no-repeat center;
  background-size: cover;
}

h1 {
  font-size: 4em;
  text-shadow: -8px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
    1px 1px 0 #000;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #a8a8a821;
  backdrop-filter: blur(30px);
  padding: 3em;
  border-radius: 20px;
  gap: 3em;
}

.game-log {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 3em;
  font-size: 2em;
}

.player-img {
  height: 300px;
  width: 300px;
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

.game-log > .choice-img {
  width: 50px;
  height: 50px;
}

.game-log h2 {
  text-align: center;
  min-width: 450px;
}

.game-log p {
  text-decoration: underline;
}

.player-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
  font-size: 20px;
}

.user-input {
  display: flex;
  gap: 8em;
}

.input-button-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 25px;
  gap: 0.5em;
  font-weight: 800;
}

#rock:active {
  box-shadow: #ef547f 0 5px;
}

#paper:active {
  box-shadow: #ffdd54 0 5px;
}

#scissors:active {
  box-shadow: #73dbe1 0 5px;
}

.input-button-wrapper p {
  color: black;
}

#rock p {
  text-shadow: -1px -1px 0 #ef547f, 1px -1px 0 #ef547f, -1px 1px 0 #ef547f,
    1px 1px 0 #ef547f;
}

#paper p {
  text-shadow: -1px -1px 0 #ffdd54, 1px -1px 0 #ffdd54, -1px 1px 0 #ffdd54,
    1px 1px 0 #ffdd54;
}

#scissors p {
  text-shadow: -1px -1px 0 #73dbe1, 1px -1px 0 #73dbe1, -1px 1px 0 #73dbe1,
    1px 1px 0 #73dbe1;
}

.user-input img {
  width: 130px;
  height: 130px;
}

#popup-window {
  visibility: hidden;
  position: fixed;
  z-index: 1;
  width: 700px;
  height: 250px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1em;

  background-color: white;
  border-radius: 20px;
  box-shadow: rgba(0, 0, 0, 0.423) 0 0 30px 10px;
}

#popup-window button {
  color: white;
  font-size: 20px;
  padding: 10px 50px;
  background-color: black;
  border-radius: 10px;
  border: none;
}

#popup-window button:hover {
  box-shadow: rgba(0, 0, 0, 0.515) 4px 4px 10px;
}

#popup-window button:active {
  color: black;
  background-color: white;
}

